@@ -476,7 +476,7 @@ dnl AC_CHECK_LIB(curses, main)
 dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
-AC_CHECK_HEADERS(fcntl.h sys/window.h unistd.h)
+AC_CHECK_HEADERS(fcntl.h sys/window.h sys/termios.h unistd.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
