@@ -1,3 +1,5 @@
+(2001/06/28 - broeker) Add test for existence of <sys/termios.h> header,
+		       to protect platforms that don't have it.
 (2001/06/27 - broeker) Yet another set of automake/autoconf changes. 
                        Regenerated auto* files checked in, too. We are
 		       'make distcheck' ready, now. Added 'ylwrap' to
